proxy/controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: proxy-deployment
  namespace: default
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      serviceAccountName: proxy-account
      containers:
        - name: traefik
          image: traefik
          ports:
            - name: http
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          args:
            - --api.insecure
            - --providers.kubernetesingress
---
kind: Service
apiVersion: v1
metadata:
  name: proxy
  namespace: default
spec:
  selector:
    app: proxy
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 80
  type: LoadBalancer
